--- a/wsparcie/w_styl.css
+++ b/wsparcie/w_styl.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     background: #1d1d1f;
     font-family: monospace;
     font-size: 20px;
@@ -8,6 +9,7 @@ body {
 
 .all {
     width: 100%;
+
 }
 
 .wstawka {
@@ -31,6 +33,8 @@ body {
     border-top: 3px solid #f9f2b0;
     border-bottom: 3px solid #f9f2b0;
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 ol {
@@ -53,11 +57,15 @@ ol a {
 
 ol>li {
     float: left;
-    width: 250px;
+    width: 16.309%;
     height: 100%;
     border-right: 3px solid #f9f2b0;
 }
 
 ol>li:hover {
     background-color: #1e1579;
+}
+
+ol>li:first-child {
+    border-left: 3px solid #f9f2b0;
 }
