--- a/zasady/z_styl.css
+++ b/zasady/z_styl.css
@@ -71,5 +71,14 @@ ol>li:first-child {
 }
 
 .text {
-    margin: 30px;
+    text-decoration: solid;
+    margin: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 25px;
+    text-align: left;
+}
+
+.text2 {
+    font-size: 35px;
 }
