--- a/uczestnicy/u_styl.css
+++ b/uczestnicy/u_styl.css
@@ -69,3 +69,120 @@ ol>li:hover {
 ol>li:first-child {
     border-left: 3px solid #f9f2b0;
 }
+
+.info {
+    display: flex;
+}
+
+.png {
+    margin-top: 10px;
+    margin-left: 10px;
+    border: #faed7e solid 3px;
+    width: 200px;
+    border-radius: 10px;
+    background: #1a1738;
+}
+
+.png2 {
+    margin-top: 10px;
+    margin-left: 10px;
+    border: #faed7e solid 3px;
+    width: 100px;
+    border-radius: 10px;
+    background: #1a1738;
+}
+
+.box {
+    width: 130%;
+    border: #151333 solid 5px;
+    margin-left: 50px;
+    border-radius: 10px;
+    height: 785px;
+    background: #09071f;
+}
+
+.info2 {
+    width: 90%;
+
+}
+
+.nazwa {
+    font-size: 40px;
+    text-align: center;
+}
+
+.tabela {
+    border: #faed7e solid 3px;
+    margin: 10px;
+    height: 150px;
+    text-align: center;
+    background: #1a1738;
+}
+
+.players {
+    border: #faed7e solid 3px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
+    text-align: center;
+    display: flex;
+    background: #1a1738;
+}
+
+.border1 {
+    width: 13%;
+    border-right: #faed7e solid 3px;
+}
+
+.border2 {
+    width: 17%;
+    border-right: #faed7e solid 3px;
+}
+
+.border3 {
+    width: 10%;
+    border-right: #faed7e solid 3px;
+}
+
+.border4 {
+    width: 10%;
+
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 40%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    z-index: 111;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+#overlay {
+    position: fixed;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(00, 00, 00, 0);
+    pointer-events: none;
+}
+
+#overlay.active {
+    opacity: 1;
+    pointer-events: all;
+    background-color: rgb(00, 00, 00, 0.5);
+}
+
+.lista {
+    margin: 20px;
+    display: flex;
+}
