--- a/uczestnicy/u_styl.css
+++ b/uczestnicy/u_styl.css
@@ -125,9 +125,23 @@ ol>li:first-child {
     margin-right: 10px;
     border-radius: 10px;
     text-align: center;
-    display: flex;
     background: #1a1738;
+    display: flex;
 }
+
+.flex {
+    display: flex;
+}
+
+.b1 {
+    background: #fd0505;
+    display: none;
+}
+
+.b1 {
+    background: #92fd05;
+}
+
 
 .border1 {
     width: 15%;
@@ -195,17 +209,28 @@ ol>li:first-child {
     border-top: 6px solid gray;
     width: 20px;
     height: 20px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
     animation: spin 2s linear infinite;
-  }
-  
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
