--- a/uczestnicy/u_styl.css
+++ b/uczestnicy/u_styl.css
@@ -88,7 +88,6 @@ ol>li:first-child {
     margin-left: 10px;
     border: #faed7e solid 3px;
     width: 100px;
-    height: auto;
     border-radius: 10px;
     background: #1a1738;
 }
@@ -200,6 +199,7 @@ ol>li:first-child {
 .lista {
     margin: 20px;
     display: flex;
+    width: 100%;
 }
 
 .loader {
