--- a/styl.css
+++ b/styl.css
@@ -69,3 +69,12 @@ ol>li:hover {
 ol>li:first-child {
     border-left: 3px solid #f9f2b0;
 }
+
+.text {
+    text-decoration: solid;
+    margin: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 25px;
+    text-align: left;
+}
